wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_struct.stderr
error: ErrorCategory can only be derived for enums.
 --> tests/derive_error_category/fail_on_struct.rs:3:1
  |
3 | struct Error {}
  | ^^^^^^
