wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_struct.rs
#[derive(wallet_common_macros::ErrorCategory)]
#[allow(dead_code)]
struct Error {}

fn main() {}
